--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "@toggled.dev/toggled-client-js",
   "version": "1.0.0",
   "description": "A browser client that can be used together with the Toggled.dev management platform.",
-  "main": "index.js",
+  "main": "./build/cjs/index.js",
+  "types": "./build/cjs/index.d.ts",
+  "browser": "./build/main.min.js",
+  "files": [
+    "build",
+    "examples",
+    "src"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf build && tsc && rollup -c rollup.config.mjs",
+    "prepack": "yarn build",
+    "format": "prettier src --write --loglevel warn",
+    "lint": "prettier src --check && eslint src",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +26,54 @@
   "bugs": {
     "url": "https://github.com/toggled-dev/toggled-client-js/issues"
   },
-  "homepage": "https://github.com/toggled-dev/toggled-client-js#readme"
+  "homepage": "https://github.com/toggled-dev/toggled-client-js#readme",
+  "dependencies": {
+    "tiny-emitter": "^2.1.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/runtime": "^7.22.5",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "@types/jest": "^29.5.2",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-fetch-mock": "3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
+    "prettier": "^2.8.8",
+    "rollup": "^3.25.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "ts-jest": "^29.1.0",
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
+    "uglify-js": "^3.17.4"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "@typescript-eslint/no-explicit-any": "off"
+    }
+  }
 }
